[package]
edition = "2021"
name = "docxtemplate"
version = "0.0.0"

[[bin]]
name = "install_deps"

[lib]
crate-type = ["cdylib"]

[features]
java_callback = []

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", features = ["napi4", "async"] }
napi-derive = "2.12.2"
j4rs = "0.17.2"
rust-embed = { version = "8.3.0", features = ["interpolate-folder-path"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = true
